--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+ngx-loading-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
+
+ngx-loading-bar .ngx-loading-bar {
+  height: 4px;
+  background-color: #29d;
+  transition: width 0.3s ease-in-out;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(to right, #29d, #00f);
+}
+
+ngx-loading-bar.complete .ngx-loading-bar {
+  background-color: #4caf50;
+}
